# robby

./: .gitignore  LICENSE
.github/workflows/: mdbook.yml
app_core/: .mxproject  CMakeLists.txt  STM32F723XX_FLASH.ld  robby.ioc
app_core/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
app_core/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
app_core/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
app_core/cmake/stm32cubemx/: CMakeLists.txt
app_core/lib/: CMakeLists.txt
app_core/lib/vl53l8cx/: CMakeLists.txt
app_core/lib/vl53l8cx/platform/: platform.h
app_core/src/service/distance/: app_tof.c  app_tof.h  distance_visualizer.c  distance_visualizer.h  tof_io.c  tof_io.h  tof_platform.c
app_core/src/util/: colormap.c  colormap.h
doc/: book.toml
doc/src/: SUMMARY.md  hardware.md
hardware/: Robby.DsnWrk
hardware/battery_pack/: BatteryPack.BomDoc  BatteryPack.OutJob  BatteryPack.PCBDwf  BatteryPack.PrjPcb  BatteryPack.PrjPcbStructure  Charger.SchDoc  MonitoringProtection.SchDoc  Top.SchDoc
hardware/battery_pack/jobs/: assembly.OutJob  gerber.OutJob
hardware/distance_sensor/: DistanceSensor.BomDoc  DistanceSensor.OutJob  DistanceSensor.PCBDwf  DistanceSensor.PcbDoc  DistanceSensor.PrjPcb  DistanceSensor.PrjPcbStructure  DistanceSensor.PrjPcbVariants  DistanceSensor.SchDoc
hardware/lib/: lib.PrjPcb  robby.PcbLib  robby.SchLib
hardware/motor_base/: Connectivity.SchDoc  DiscoCarrier.Harness  DiscoCarrier.SchDoc  Misc.SchDoc  MotorBase.BomDoc  MotorBase.OutJob  MotorBase.PCBDwf  MotorBase.PrjPcb  MotorBase.PrjPcbStructure  MotorDriver.SchDoc  Power.SchDoc  Top.SchDoc
hardware/motor_base/jobs/: assembly.OutJob
hardware/panel/: RobbyPanel.PcbDoc  RobbyPanel.PrjPcb
hardware/sensor_addon/: SensorAddOn.PCBDwf  SensorAddOn.PcbDoc  SensorAddOn.PrjPcb  SensorAddOn.SchDoc
hardware/sensor_addon/jobs/: assembly.OutJob
hardware/sensor_extension/: SensorAddOn.BomDoc  SensorAddOn.OutJob  SensorAddOn.PCBDwf  SensorAddOn.PcbDoc  SensorAddOn.PrjPcb  SensorAddOn.PrjPcbStructure  SensorAddOn.SchDoc
